# pdf-work

./: .gitignore  README.md  cli.py  pyproject.toml
cli/: __init__.py
cli/pdf/: __init__.py
cli/pdf/controller/: crop.py  delete.py  extract.py  highlight.py  mask.py  merge.py  read.py  remove_last_page.py  remove_metadata.py  remove_password.py  replace.py
cli/pdf/models/: __init__.py
cli/pdf/utils/: __init__.py
cli/pdf/view/: crop.py  delete.py  extract.py  highlight.py  mask.py  merge.py  read.py  remove_last_page.py  remove_metadata.py  remove_password.py  replace.py
cli/utils/: __init__.py  decorators.py  rp.py
tests/: conftest.py  test_controllers.py
